--- a/Exercicio_01/Views/Guests/Details.cshtml
+++ b/Exercicio_01/Views/Guests/Details.cshtml
@@ -16,35 +16,31 @@
 <div>
     <h4>Guest</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefone)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefone)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Comparecimento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Comparecimento)
-        </dd>
-    </dl>
+    <table>
+        <thead>
+            <tr>
+                <td>@Html.DisplayNameFor(model => model.Nome)</td>
+                <td>@Html.DisplayNameFor(model => model.Email)</td>
+                <td>@Html.DisplayNameFor(model => model.Telefone)</td>
+                <td>@Html.DisplayNameFor(model => model.Comparecimento)</td>
+
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>@Html.DisplayFor(model => model.Nome)</td>
+                <td>@Html.DisplayFor(model => model.Email)</td>
+                <td>@Html.DisplayFor(model => model.Telefone)</td>
+                <td>@Html.DisplayFor(model => model.Comparecimento)</td>
+            </tr>
+        </tbody>
+    </table>
+    <div>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id}) |
+        @Html.ActionLink("Delete", "Delete", new { id = Model.Id })
+    </div>
 </div>
 <div>
-    @Html.ActionLink("Details", "Details", new {  id = Model.Nome }) |
     <a asp-action="Index">Back to List</a>
 </div>
 </body>
