--- a/Exercicio_01/Views/Guests/Create.cshtml
+++ b/Exercicio_01/Views/Guests/Create.cshtml
@@ -9,6 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="~/css/site.css" />
     <title>Create</title>
 </head>
 <body>
