--- a/Exercicio_01/Views/Shared/_Layout.cshtml
+++ b/Exercicio_01/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Guests</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Guests" asp-action="Index">Guests</a>
                         </li>
                     </ul>
                 </div>
